--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.2",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
@@ -25,6 +26,7 @@
     "immer": "^10.0.3",
     "lucide-react": "^0.292.0",
     "next": "14.0.1",
+    "o1js": "1.6.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
@@ -33,8 +35,7 @@
     "tailwindcss-animate": "^1.0.7",
     "truncate-middle": "^1.0.6",
     "zod": "^3.22.4",
-    "zustand": "^4.4.6",
-    "o1js": "1.6.0"
+    "zustand": "^4.4.6"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -52,11 +53,11 @@
   },
   "peerDependencies": {
     "@proto-kit/common": "*",
-    "@proto-kit/protocol": "*",
+    "@proto-kit/library": "*",
     "@proto-kit/module": "*",
+    "@proto-kit/protocol": "*",
     "@proto-kit/sdk": "*",
     "@proto-kit/sequencer": "*",
-    "@proto-kit/library": "*",
     "tsyringe": "^4.7.0"
   }
 }
