--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-tooltip": "^1.0.7",
     "@tailwindcss/typography": "^0.5.10",
     "@uidotdev/usehooks": "^2.4.1",
+    "axios": "^1.7.7",
     "chain": "workspace:*",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -34,6 +35,7 @@
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
     "truncate-middle": "^1.0.6",
+    "viem": "^2.21.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.6"
   },
