--- a/.github/workflows/run_codebase.yml
+++ b/.github/workflows/run_codebase.yml
@@ -29,11 +29,11 @@ jobs:
       # Step 4: Copy files to the target directory
       - name: Copy files to target directory
         run: |
-          TARGET_DIR="/mutuum-ethglobal" # Define the target directory
+          TARGET_DIR="mutuum-ethglobal" # Define the target directory
           cd ~ && sudo rsync -av --exclude='.git' . $TARGET_DIR
 
       # Step 5: Navigate to the target directory and run npm start
-      - name: Start application
-        run: |
-          cd mutuum-ethglobal
-          pnpm env:inmemory dev --filter chain
+    #   - name: Start application
+    #     run: |
+    #       cd mutuum-ethglobal
+    #       pnpm env:inmemory dev --filter chain
